# nidar_ws

./: .gitignore  README.md
cad/scout_drone/: config.json  robot.urdf
cad/scout_drone/assets/: battery.part  bottom_plate.part  camera_bracket.part  flight_controller.part  landing_skid.part  motor.part  motor.stl  propeller.part  raspberry_pi.part  standoff.part  standoff.stl  top_plate.part  top_plate.stl
docs/: README.md
src/opsg_core/: package.xml  setup.cfg  setup.py
src/opsg_core/launch/: launch.py
src/opsg_core/opsg_core/: altitude_publisher.py  arm_service.py  target_subscriber.py  waypoint_node.py
src/opsg_description/: CMakeLists.txt  package.xml
src/opsg_description/config/: 4050_gz_scout_drone
src/opsg_description/launch/: spawn_scout.launch.py
src/opsg_description/meshes/scout_drone/: battery.stl  flight_controller.stl
src/opsg_description/models/scout_drone/: model.config  model.sdf
src/opsg_description/models/scout_drone/meshes/: bottom_plate.stl  camera_bracket.stl  landing_skid.stl  propeller.stl  raspberry_pi.stl
src/opsg_description/scripts/: sitl_scout.sh  start_agent.sh
src/opsg_description/urdf/: scout_drone.urdf
src/opsg_interfaces/: CMakeLists.txt  package.xml
src/opsg_mission/: package.xml  setup.cfg  setup.py
src/opsg_perception/: package.xml  setup.cfg  setup.py
src/opsg_perception/opsg_perception/: camera_viewer_node.py  yolo_detection_node.py
