<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opsg_description</name>
  <version>0.0.0</version>
  <description>URDF models, 3D meshes, and Gazebo simulation environments for OpSG drones.</description>
  <maintainer email="shonarun3785@gmail.com">Shon Arun</maintainer>
  <author email="shonarun3785@gmail.com">Shon Arun</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
