<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opsg_mission</name>
  <version>0.0.0</version>
  <description>High-level mission autonomy, state machines, and multi-drone coordination for OpSG rescue operations.</description>
  <maintainer email="shonarun3785@gmail.com">Shon Arun</maintainer>
  <author email="shonarun3785@gmail.com">Shon Arun</author>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
