<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opsg_perception</name>
  <version>0.0.0</version>
  <description>Perception and computer vision nodes, including YOLO human detection, for OpSG drones.</description>
  <maintainer email="shonarun3785@gmail.com">Shon Arun</maintainer>
  <author email="shonarun3785@gmail.com">Shon Arun</author>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
